--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
+version: "3.8"
+
 services:
   app:
-    build: ./docker/react
+    build: ./myapp
     tty: true
     working_dir: /usr/src/app
-    volumes:
-      - ./myapp:/usr/src/app
     ports:
       - "3000:3000"
 
