--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /usr/src/app
 
 # パッケージのインストール
 COPY ./package*.json ./
-RUN ["npm", "install"]
+RUN npm install
 
 COPY . .
 
-RUN npm run build
+# RUN npm run build
 
 CMD ["npm", "start"]
